add light bar visual

--- a/Mapps/Interface/MainWindow.xaml
+++ b/Mapps/Interface/MainWindow.xaml
@@ -22,10 +22,10 @@
                 <Label x:Name="labelCircle" Margin="0,145,10,0" VerticalContentAlignment="center" HorizontalContentAlignment="center" HorizontalAlignment="Right" VerticalAlignment="Top" Width="65" Height="25" Content="Circle" Foreground="White" Background="DarkRed" Grid.Column="1" FontSize="11" FontWeight="Bold" />
                 <Label x:Name="labelSquare" Margin="0,115,10,0" VerticalContentAlignment="center" HorizontalContentAlignment="center" HorizontalAlignment="Right" VerticalAlignment="Top" Width="65" Height="25" Content="Square" Foreground="White" Background="DarkRed" Grid.Column="1" FontSize="11" FontWeight="Bold" />
                 <Label x:Name="labelTriangle" Margin="0,85,10,0" VerticalContentAlignment="center" HorizontalContentAlignment="center" HorizontalAlignment="Right" VerticalAlignment="Top" Width="65" Height="25" Content="Triangle" Foreground="White" Background="DarkRed" Grid.Column="1" FontSize="11" FontWeight="Bold" />
-                <Label x:Name="labelShare" Margin="0,85,10,0" VerticalContentAlignment="center" HorizontalContentAlignment="center" Content="Share" Foreground="White" Background="DarkRed" HorizontalAlignment="Right" Width="64" Height="26" VerticalAlignment="Top" FontSize="11" FontWeight="Bold" />
-                <Label x:Name="labelOptions" Margin="10,85,0,0" VerticalContentAlignment="center" HorizontalContentAlignment="center" Content="Options" Foreground="White" Background="DarkRed" HorizontalAlignment="Left" Width="64" Grid.Column="1" Height="26" VerticalAlignment="Top" FontSize="11" FontWeight="Bold" />
-                <Label x:Name="labelPS" Margin="164,175,163,0" VerticalContentAlignment="center" HorizontalContentAlignment="center" Content="PS" Foreground="White" Background="DarkRed" FontSize="11" FontWeight="Bold" Grid.ColumnSpan="2" Height="26" VerticalAlignment="Top" />
-                <Label x:Name="labelTouchPad" Margin="105,10,104,0" VerticalContentAlignment="center" HorizontalContentAlignment="center" Content="Touch Pad" Foreground="White" Background="DarkRed" Grid.ColumnSpan="2" Height="61" VerticalAlignment="Top" FontSize="11" FontWeight="Bold" />
+                <Label x:Name="labelShare" Margin="0,97,10,0" VerticalContentAlignment="center" HorizontalContentAlignment="center" Content="Share" Foreground="White" Background="DarkRed" HorizontalAlignment="Right" Width="64" Height="26" VerticalAlignment="Top" FontSize="11" FontWeight="Bold" />
+                <Label x:Name="labelOptions" Margin="10,97,0,0" VerticalContentAlignment="center" HorizontalContentAlignment="center" Content="Options" Foreground="White" Background="DarkRed" HorizontalAlignment="Left" Width="64" Grid.Column="1" Height="26" VerticalAlignment="Top" FontSize="11" FontWeight="Bold" />
+                <Label x:Name="labelPS" Margin="164,174,163,0" VerticalContentAlignment="center" HorizontalContentAlignment="center" Content="PS" Foreground="White" Background="DarkRed" FontSize="11" FontWeight="Bold" Grid.ColumnSpan="2" Height="26" VerticalAlignment="Top" />
+                <Label x:Name="labelTouchPad" Margin="105,22,104,0" VerticalContentAlignment="center" HorizontalContentAlignment="center" Content="Touch Pad" Foreground="White" Background="DarkRed" Grid.ColumnSpan="2" Height="61" VerticalAlignment="Top" FontSize="11" FontWeight="Bold" />
                 <Label x:Name="labelL3" Margin="90,145,0,0" VerticalContentAlignment="center" HorizontalContentAlignment="center" Content="" Foreground="White" Background="DarkRed" FontSize="11" FontWeight="Bold" Height="55" VerticalAlignment="Top" HorizontalAlignment="Left" Width="55" />
                 <Label x:Name="labelR3" Margin="34,145,0,0" VerticalContentAlignment="center" HorizontalContentAlignment="center" Content="" Foreground="White" Background="DarkRed" FontSize="11" FontWeight="Bold" Height="55" VerticalAlignment="Top" Grid.Column="1" HorizontalAlignment="Left" Width="55" />
                 <Label x:Name="labelL2" Margin="10,10,0,0" VerticalContentAlignment="center" HorizontalContentAlignment="center" HorizontalAlignment="Left" VerticalAlignment="Top" Width="65" Height="30" Content="L2" Foreground="White" Background="DarkRed" FontSize="11" FontWeight="Bold" />
@@ -35,6 +35,7 @@
                 <Label x:Name="labelSmallInfo" Content="Label" Margin="10,0,10,10" Foreground="White" FontStyle="Italic" Grid.ColumnSpan="2" Height="26" VerticalAlignment="Bottom"/>
                 <Label x:Name="labelBattery" Content="Battery: 100%" HorizontalAlignment="Left" Margin="10,264,0,0" VerticalAlignment="Top" Foreground="White"/>
                 <Label x:Name="labelConnection" Content="Connection: Disconnected" HorizontalAlignment="Left" Margin="10,233,0,0" VerticalAlignment="Top" Foreground="White"/>
+                <Rectangle x:Name="lightBar" Grid.ColumnSpan="2" HorizontalAlignment="Left" Height="11" Margin="105,11,0,0" VerticalAlignment="Top" Width="148" Fill="White"/>
             </Grid>
         </GroupBox>
         <ComboBox x:Name="comboSerialNumbers" HorizontalAlignment="Left" Margin="138,12,0,0" VerticalAlignment="Top" Width="120" SelectionChanged="ComboSerialNumbers_SelectionChanged" SelectedIndex="0">
@@ -44,7 +45,7 @@
         <GroupBox Header="Actions" Margin="10,41,384,10" Foreground="White">
             <Grid>
                 <Button x:Name="buttonTestRumble" Content="Test Rumble" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top" Height="27" Width="271" Click="ButtonTestRumble_Click"/>
-                <Button x:Name="buttonSetColor" Content="Set Color" HorizontalAlignment="Center" Margin="0,42,0,0" VerticalAlignment="Top" Height="27" Width="271" Click="ButtonSetColor_Click"/>
+                <Button x:Name="buttonSetColor" Content="Set Light Bar Color" HorizontalAlignment="Center" Margin="0,42,0,0" VerticalAlignment="Top" Height="27" Width="271" Click="ButtonSetColor_Click"/>
             </Grid>
         </GroupBox>
     </Grid>
